--- a/ShippingController(V1.0)/ShippingController(V1.0)/Web.config
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Web.config
@@ -44,11 +44,11 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://192.168.1.16/Warehouse Services/KrausWarehouseServices.Service.Shipping.Delete.svc/SOA" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IDelete" contract="DeleteService.IDelete" name="BasicHttpBinding_IDelete"/>
-      <endpoint address="http://192.168.1.16/Warehouse Services/KrausWarehouseServices.Service.RMA.Get.svc/SOA" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IGet1" contract="GetRGAService.IGet" name="BasicHttpBinding_IGet1"/>
-      <endpoint address="http://192.168.1.16/Warehouse Services/KrausWarehouseServices.Service.RMA.Save.svc/SOA" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISave1" contract="SetRGAService.ISave" name="BasicHttpBinding_ISave1"/>
-      <endpoint address="http://192.168.1.16/Warehouse Services/KrausWarehouseServices.Service.Shipping.Get.svc/SOA" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IGet" contract="GetService.IGet" name="BasicHttpBinding_IGet"/>
-      <endpoint address="http://192.168.1.16/Warehouse Services/KrausWarehouseServices.Service.Shipping.Save.svc/SOA" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISave" contract="SetService.ISave" name="BasicHttpBinding_ISave"/>
+      <endpoint address="http://192.168.1.16:74/KrausWarehouseServices.Service.RMA.Get.svc/SOA" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IGet1" contract="GetRGAService.IGet" name="BasicHttpBinding_IGet1" />
+      <endpoint address="http://192.168.1.16:74/KrausWarehouseServices.Service.Shipping.Delete.svc/SOA" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IDelete" contract="DeleteService.IDelete" name="BasicHttpBinding_IDelete" />
+      <endpoint address="http://192.168.1.16:74/KrausWarehouseServices.Service.RMA.Save.svc/SOA" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISave1" contract="SetRGAService.ISave" name="BasicHttpBinding_ISave1" />
+      <endpoint address="http://192.168.1.16:74/KrausWarehouseServices.Service.Shipping.Get.svc/SOA" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IGet" contract="GetService.IGet" name="BasicHttpBinding_IGet" />
+      <endpoint address="http://192.168.1.16:74/KrausWarehouseServices.Service.Shipping.Save.svc/SOA" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISave" contract="SetService.ISave" name="BasicHttpBinding_ISave" />
     </client>
   </system.serviceModel>
 </configuration>
