--- a/ShippingController(V1.0)/ShippingController(V1.0)/Web.config
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Web.config
@@ -39,8 +39,8 @@
         <binding name="BasicHttpBinding_IGet" allowCookies="true" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647"/>
         <binding name="BasicHttpBinding_ISave" allowCookies="true" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647"/>
         <binding name="BasicHttpBinding_IDelete" allowCookies="true" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647"/>
-        <binding name="BasicHttpBinding_IGet1"/>
-        <binding name="BasicHttpBinding_ISave1"/>
+        <binding name="BasicHttpBinding_IGet1" allowCookies="true" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647"/>
+        <binding name="BasicHttpBinding_ISave1" allowCookies="true" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647" />
       </basicHttpBinding>
     </bindings>
     <client>
