--- a/PackingClassLibrary/App.Config
+++ b/PackingClassLibrary/App.Config
@@ -21,8 +21,8 @@
           maxReceivedMessageSize="2147483647" />
         <binding name="BasicHttpBinding_IDelete" allowCookies="true"
           maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647" />
-        <binding name="BasicHttpBinding_IGet1" />
-        <binding name="BasicHttpBinding_ISave1" />
+        <binding name="BasicHttpBinding_IGet1" allowCookies="true" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647"/>
+        <binding name="BasicHttpBinding_ISave1" allowCookies="true" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647" />
       </basicHttpBinding>
     </bindings>
     <client>
