Reasons Form added

--- a/ShippingController(V1.0)/ShippingController(V1.0)/ShippingController(V1.0).csproj
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/ShippingController(V1.0).csproj
@@ -92,6 +92,7 @@
     <Content Include="Forms\Web Forms\frmErrorLog.aspx" />
     <Content Include="Forms\Web Forms\frmRetunDetail.aspx" />
     <Content Include="Forms\Web Forms\frmReturnEdit.aspx" />
+    <Content Include="Forms\Web Forms\frmRGAReasons.aspx" />
     <Content Include="Forms\Web Forms\frmRoles.aspx" />
     <Content Include="Forms\Web Forms\frmShipmentInfoDetails.aspx" />
     <Content Include="Forms\Web Forms\frmShippingInfo.aspx" />
@@ -153,6 +154,13 @@
     </Compile>
     <Compile Include="Forms\Web Forms\frmReturnEdit.aspx.designer.cs">
       <DependentUpon>frmReturnEdit.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Web Forms\frmRGAReasons.aspx.cs">
+      <DependentUpon>frmRGAReasons.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Forms\Web Forms\frmRGAReasons.aspx.designer.cs">
+      <DependentUpon>frmRGAReasons.aspx</DependentUpon>
     </Compile>
     <Compile Include="Forms\Web Forms\frmRoles.aspx.cs">
       <DependentUpon>frmRoles.aspx</DependentUpon>
@@ -327,7 +335,7 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>True</UseIIS>
+          <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>44036</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
