--- a/ShippingController(V1.0)/ShippingController(V1.0)/ShippingController(V1.0).csproj
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/ShippingController(V1.0).csproj
@@ -92,6 +92,7 @@
     <Content Include="Forms\Web Forms\frmErrorLog.aspx" />
     <Content Include="Forms\Web Forms\frmRetunDetail.aspx" />
     <Content Include="Forms\Web Forms\frmReturnEdit.aspx" />
+    <Content Include="Forms\Web Forms\frmRMAConfig.aspx" />
     <Content Include="Forms\Web Forms\frmRMAEnter.aspx" />
     <Content Include="Forms\Web Forms\frmRoles.aspx" />
     <Content Include="Forms\Web Forms\frmShipmentInfoDetails.aspx" />
@@ -154,6 +155,13 @@
     </Compile>
     <Compile Include="Forms\Web Forms\frmReturnEdit.aspx.designer.cs">
       <DependentUpon>frmReturnEdit.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Web Forms\frmRMAConfig.aspx.cs">
+      <DependentUpon>frmRMAConfig.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Forms\Web Forms\frmRMAConfig.aspx.designer.cs">
+      <DependentUpon>frmRMAConfig.aspx</DependentUpon>
     </Compile>
     <Compile Include="Forms\Web Forms\frmRMAEnter.aspx.cs">
       <DependentUpon>frmRMAEnter.aspx</DependentUpon>
