--- a/ShippingController(V1.0)/ShippingController(V1.0)/Web.config
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Web.config
@@ -4,6 +4,11 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <configSections>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="ShippingController_V1._0_.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
   <system.web>
     <httpHandlers>
       <add path="Reserved.ReportViewerWebControl.axd" verb="*" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" validate="false"/>
@@ -51,4 +56,11 @@
       <endpoint address="http://192.168.1.16:74/KrausWarehouseServices.Service.Shipping.Save.svc/SOA" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISave" contract="SetService.ISave" name="BasicHttpBinding_ISave" />
     </client>
   </system.serviceModel>
+  <applicationSettings>
+    <ShippingController_V1._0_.Properties.Settings>
+      <setting name="ImageServerString" serializeAs="String">
+        <value>http://fileshare.kraususa.com/{##}?login=rgauser:rgaICG2014</value>
+      </setting>
+    </ShippingController_V1._0_.Properties.Settings>
+  </applicationSettings>
 </configuration>
