Setting Changed Web config working

--- a/ShippingController(V1.0)/ShippingController(V1.0)/Web.config
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -56,11 +56,7 @@
       <endpoint address="http://192.168.1.16:74/KrausWarehouseServices.Service.Shipping.Save.svc/SOA" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISave" contract="SetService.ISave" name="BasicHttpBinding_ISave" />
     </client>
   </system.serviceModel>
-  <applicationSettings>
-    <ShippingController_V1._0_.Properties.Settings>
-      <setting name="ImageServerString" serializeAs="String">
-        <value>http://fileshare.kraususa.com/{##}?login=rgauser:rgaICG2014</value>
-      </setting>
-    </ShippingController_V1._0_.Properties.Settings>
-  </applicationSettings>
+  <appSettings>
+    <add key="ImageServerPath" value=" http://fileshare.kraususa.com/{###}?login=rgauser:rgaICG2014" />
+  </appSettings>
 </configuration>
