--- a/ShippingController(V1.0)/ShippingController(V1.0)/Web.config
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Web.config
@@ -57,6 +57,6 @@
     </client>
   </system.serviceModel>
   <appSettings>
-    <add key="ImageServerPath" value=" http://fileshare.kraususa.com/{###}?login=rgauser:rgaICG2014" />
+    <add key="ImageServerPath" value=" http://fileshare.kraususa.com/#{ImageName}#?login=rgauser:rgaICG2014" />
   </appSettings>
 </configuration>
