Edit form changes

--- a/PackingClassLibrary/App.Config
+++ b/PackingClassLibrary/App.Config
@@ -21,8 +21,11 @@
           maxReceivedMessageSize="2147483647" />
         <binding name="BasicHttpBinding_IDelete" allowCookies="true"
           maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647" />
-        <binding name="BasicHttpBinding_IGet1" allowCookies="true" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647"/>
-        <binding name="BasicHttpBinding_ISave1" allowCookies="true" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647" />
+        <binding name="BasicHttpBinding_IGet1" allowCookies="true" maxBufferPoolSize="2147483647"
+          maxReceivedMessageSize="2147483647" />
+        <binding name="BasicHttpBinding_ISave1" allowCookies="true" maxBufferPoolSize="2147483647"
+          maxReceivedMessageSize="2147483647" />
+        <binding name="BasicHttpBinding_IDelete1" />
       </basicHttpBinding>
     </bindings>
     <client>
@@ -41,6 +44,9 @@
       <endpoint address="http://192.168.1.16:74/KrausWarehouseServices.Service.Shipping.Save.svc/SOA"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISave"
         contract="SetService.ISave" name="BasicHttpBinding_ISave" />
+      <endpoint address="http://192.168.1.16:74/KrausWarehouseServices.Service.RMA.Delete.svc/SOA"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IDelete1"
+        contract="DeleteRMAService.IDelete" name="BasicHttpBinding_IDelete1" />
     </client>
   </system.serviceModel>
 </configuration>
