--- a/ShippingController(V1.0)/ShippingController(V1.0)/ShippingController(V1.0).csproj
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/ShippingController(V1.0).csproj
@@ -196,6 +196,7 @@
     <Compile Include="Models\modelExportTo.cs" />
     <Compile Include="Models\modelImageServer.cs" />
     <Compile Include="Models\modelReasons.cs" />
+    <Compile Include="Models\modelReaturnUpdate.cs" />
     <Compile Include="Models\modelReturn.cs" />
     <Compile Include="Models\modelRoles.cs" />
     <Compile Include="Views\cDeactivateStation.cs" />
