--- a/PackingClassLibrary/App.Config
+++ b/PackingClassLibrary/App.Config
@@ -25,7 +25,8 @@
           maxReceivedMessageSize="2147483647" />
         <binding name="BasicHttpBinding_ISave1" allowCookies="true" maxBufferPoolSize="2147483647"
           maxReceivedMessageSize="2147483647" />
-        <binding name="BasicHttpBinding_IDelete1" />
+        <binding name="BasicHttpBinding_IDelete1"  allowCookies="true" maxBufferPoolSize="2147483647"
+          maxReceivedMessageSize="2147483647" />
       </basicHttpBinding>
     </bindings>
     <client>
