--- a/ShippingController(V1.0)/ShippingController(V1.0)/ShippingController(V1.0).csproj
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/ShippingController(V1.0).csproj
@@ -91,6 +91,7 @@
     <Content Include="Forms\Web Forms\frmDisableStation.aspx" />
     <Content Include="Forms\Web Forms\frmErrorLog.aspx" />
     <Content Include="Forms\Web Forms\frmPopup.aspx" />
+    <Content Include="Forms\Web Forms\frmPopupForEditRMAReasons.aspx" />
     <Content Include="Forms\Web Forms\frmRetunDetail.aspx" />
     <Content Include="Forms\Web Forms\frmReturnEdit.aspx" />
     <Content Include="Forms\Web Forms\frmRMAConfig.aspx" />
@@ -149,6 +150,13 @@
     </Compile>
     <Compile Include="Forms\Web Forms\frmPopup.aspx.designer.cs">
       <DependentUpon>frmPopup.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Web Forms\frmPopupForEditRMAReasons.aspx.cs">
+      <DependentUpon>frmPopupForEditRMAReasons.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Forms\Web Forms\frmPopupForEditRMAReasons.aspx.designer.cs">
+      <DependentUpon>frmPopupForEditRMAReasons.aspx</DependentUpon>
     </Compile>
     <Compile Include="Forms\Web Forms\frmRetunDetail.aspx.cs">
       <DependentUpon>frmRetunDetail.aspx</DependentUpon>
