--- a/ShippingController(V1.0)/ShippingController(V1.0)/Web.config
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Web.config
@@ -46,6 +46,7 @@
         <binding name="BasicHttpBinding_IDelete" allowCookies="true" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647"/>
         <binding name="BasicHttpBinding_IGet1" allowCookies="true" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647"/>
         <binding name="BasicHttpBinding_ISave1" allowCookies="true" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647" />
+        <binding name="BasicHttpBinding_IDelete1" allowCookies="true" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647" />
       </basicHttpBinding>
     </bindings>
     <client>
@@ -54,6 +55,7 @@
       <endpoint address="http://192.168.1.16:74/KrausWarehouseServices.Service.RMA.Save.svc/SOA" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISave1" contract="SetRGAService.ISave" name="BasicHttpBinding_ISave1" />
       <endpoint address="http://192.168.1.16:74/KrausWarehouseServices.Service.Shipping.Get.svc/SOA" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IGet" contract="GetService.IGet" name="BasicHttpBinding_IGet" />
       <endpoint address="http://192.168.1.16:74/KrausWarehouseServices.Service.Shipping.Save.svc/SOA" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISave" contract="SetService.ISave" name="BasicHttpBinding_ISave" />
+      <endpoint address="http://192.168.1.16:74/KrausWarehouseServices.Service.RMA.Delete.svc/SOA" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IDelete1" contract="DeleteRMAService.IDelete" name="BasicHttpBinding_IDelete1" />
     </client>
   </system.serviceModel>
   <appSettings>
