Images Save,RMA save completed

--- a/ShippingController(V1.0)/ShippingController(V1.0)/Web.config
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Web.config
@@ -60,5 +60,6 @@
   </system.serviceModel>
   <appSettings>
     <add key="ImageServerPath" value=" http://fileshare.kraususa.com/#{ImageName}#?login=rgauser:rgaICG2014" />
+    <add key="PhysicalPath" value="\\192.168.1.172\Macintosh HD\ftp_share\RGAImages" />
   </appSettings>
 </configuration>
