Server Settings added to the web config

--- a/ShippingController(V1.0)/ShippingController(V1.0)/Web.config
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Web.config
@@ -61,5 +61,8 @@
   <appSettings>
     <add key="ImageServerPath" value=" http://fileshare.kraususa.com/#{ImageName}#?login=rgauser:rgaICG2014" />
     <add key="PhysicalPath" value="\\192.168.1.172\Macintosh HD\ftp_share\RGAImages" />
+    <add key="Server_UserName" value="MediaServer"/>
+    <add key="Server_Domain" value="ZT3PC"/>
+    <add key="server_Password" value="kraus2013"/>
   </appSettings>
 </configuration>
