--- a/ShippingController(V1.0)/ShippingController(V1.0)/Web.config
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Web.config
@@ -10,6 +10,8 @@
     </sectionGroup>
   </configSections>
   <system.web>
+    <authentication mode="Windows"/>
+    <identity impersonate="true"/>
     <httpHandlers>
       <add path="Reserved.ReportViewerWebControl.axd" verb="*" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" validate="false"/>
     </httpHandlers>
@@ -61,8 +63,8 @@
   <appSettings>
     <add key="ImageServerPath" value=" http://fileshare.kraususa.com/#{ImageName}#?login=rgauser:rgaICG2014" />
     <add key="PhysicalPath" value="\\192.168.1.172\Macintosh HD\ftp_share\RGAImages" />
-    <add key="Server_UserName" value="MediaServer"/>
-    <add key="Server_Domain" value="ZT3PC"/>
-    <add key="server_Password" value="kraus2013"/>
+    <add key="Server_UserName" value="Shivainfotech"/>
+    <add key="Server_Domain" value="Shiva5"/>
+    <add key="server_Password" value="shiva2014"/>
   </appSettings>
 </configuration>
