--- a/ShippingController(V1.0)/ShippingController(V1.0)/Web.config
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Web.config
@@ -10,6 +10,7 @@
     </sectionGroup>
   </configSections>
   <system.web>
+    <pages enableSessionState="true"/>
     <authentication mode="Windows"/>
     <identity impersonate="true"/>
     <httpHandlers>
